tests/resource/valid/class/fun_with_body_in_interface.mamba
type MyType
    def abstract_fun(my_arg: Int) -> String

    def concrete_fun(x: Int) -> Int => return x + 10
