tests/resource/invalid/type/function/incompatible_types.mamba
def always_int() -> Int => 10

def always_bool() -> Bool => True

always_int() + always_bool()
